--- a/ix-lab4/html/lab4-3-lda.html
+++ b/ix-lab4/html/lab4-3-lda.html
@@ -12101,7 +12101,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[42]:</div>
+<div class="prompt input_prompt">In&nbsp;[63]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">displayTopicsWords</span><span class="p">(</span><span class="n">lda_topics1</span><span class="p">,</span> <span class="n">alphaValues1</span><span class="p">,</span> <span class="n">betaValues1</span><span class="p">)</span>
@@ -12118,60 +12118,65 @@ div#notebook {
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>alpha =  20.0 &amp; beta = 1.01
-Topic  1 : methods -content -management -project -work -solid -energy -analysis -assessment -teaching -
-Topic  2 : methods -design -content -data -project -analysis -systems -assessment -basic -outcomes -
-Topic  3 : methods -data -content -analysis -report -project -skills -outcomes -assessment -prerequisites -
-Topic  4 : methods -content -analysis -data -models -outcomes -control -assessment -basic -prerequisites -
-Topic  5 : design -methods -systems -analysis -content -concepts -week -system -assessment -teaching -
-Topic  6 : methods -risk -content -theory -basic -model -probability -introduction -assessment -concepts -
-Topic  7 : methods -content -outcomes -concepts -energy -basic -design -prerequisites -assessment -analysis -
-Topic  8 : methods -architecture -content -project -research -work -design -assessment -semester -teaching -
-Topic  9 : methods -materials -systems -content -organic -devices -exercises -basic -analysis -assessment -
-Topic  10 : methods -systems -engineering -design -analysis -content -teaching -system -assessment -data -
+- Topic  1 : methods -content -management -project -work -solid -energy -analysis -assessment -teaching -
+- Topic  2 : methods -design -content -data -project -analysis -systems -assessment -basic -outcomes -
+- Topic  3 : methods -data -content -analysis -report -project -skills -outcomes -assessment -prerequisites -
+- Topic  4 : methods -content -analysis -data -models -outcomes -control -assessment -basic -prerequisites -
+- Topic  5 : design -methods -systems -analysis -content -concepts -week -system -assessment -teaching -
+- Topic  6 : methods -risk -content -theory -basic -model -probability -introduction -assessment -concepts -
+- Topic  7 : methods -content -outcomes -concepts -energy -basic -design -prerequisites -assessment -analysis -
+- Topic  8 : methods -architecture -content -project -research -work -design -assessment -semester -teaching -
+- Topic  9 : methods -materials -systems -content -organic -devices -exercises -basic -analysis -assessment -
+- Topic  10 : methods -systems -engineering -design -analysis -content -teaching -system -assessment -data -
+
 alpha =  10.0 &amp; beta = 1.01
-Topic  1 : methods -content -research -innovation -assessment -project -evaluate -activities -social -skills -
-Topic  2 : models -methods -theory -probability -stochastic -linear -exercises -analysis -content -exam -
-Topic  3 : systems -control -methods -system -data -power -processing -design -signal -electronics -
-Topic  4 : design -methods -image -cell -digital -structures -week -basic -structural -analysis -
-Topic  5 : methods -equations -flow -numerical -models -molecular -analysis -basic -problems -protein -
-Topic  6 : data -methods -materials -risk -analysis -techniques -concepts -content -microscopy -basic -
-Topic  7 : methods -chemistry -content -systems -organic -concepts -outcomes -prerequisites -energy -properties -
-Topic  8 : methods -content -project -quantum -laser -work -semester -report -time -optical -
-Topic  9 : energy -methods -optical -content -design -principles -optics -devices -assessment -systems -
-Topic  10 : engineering -methods -project -teaching -systems -analysis -chemical -water -system -semester -
+- Topic  1 : methods -content -research -innovation -assessment -project -evaluate -activities -social -skills -
+- Topic  2 : models -methods -theory -probability -stochastic -linear -exercises -analysis -content -exam -
+- Topic  3 : systems -control -methods -system -data -power -processing -design -signal -electronics -
+- Topic  4 : design -methods -image -cell -digital -structures -week -basic -structural -analysis -
+- Topic  5 : methods -equations -flow -numerical -models -molecular -analysis -basic -problems -protein -
+- Topic  6 : data -methods -materials -risk -analysis -techniques -concepts -content -microscopy -basic -
+- Topic  7 : methods -chemistry -content -systems -organic -concepts -outcomes -prerequisites -energy -properties -
+- Topic  8 : methods -content -project -quantum -laser -work -semester -report -time -optical -
+- Topic  9 : energy -methods -optical -content -design -principles -optics -devices -assessment -systems -
+- Topic  10 : engineering -methods -project -teaching -systems -analysis -chemical -water -system -semester -
+
 alpha =  6.0 &amp; beta = 1.01
-Topic  1 : methods -data -content -exercises -assessment -microscopy -skills -design -oral -basic -
-Topic  2 : chemistry -methods -chemical -organic -processes -applications -content -materials -reactions -modeling -
-Topic  3 : project -skills -plan -report -research -work -methods -data -scientific -based -
-Topic  4 : models -biology -methods -model -protein -paper -cell -molecular -content -exam -
-Topic  5 : methods -linear -analysis -theory -algorithms -processing -models -data -basic -optimization -
-Topic  6 : energy -materials -properties -power -physics -heat -phase -magnetic -transfer -equations -
-Topic  7 : design -methods -system -control -innovation -content -teaching -business -assessment -research -
-Topic  8 : systems -engineering -design -methods -exercises -content -lectures -expected -system -class -
-Topic  9 : methods -optical -quantum -risk -theory -laser -basic -optics -content -introduction -
-Topic  10 : design -methods -content -stability -week -digital -assessment -final -note -activities -
+- Topic  1 : methods -data -content -exercises -assessment -microscopy -skills -design -oral -basic -
+- Topic  2 : chemistry -methods -chemical -organic -processes -applications -content -materials -reactions -modeling -
+- Topic  3 : project -skills -plan -report -research -work -methods -data -scientific -based -
+- Topic  4 : models -biology -methods -model -protein -paper -cell -molecular -content -exam -
+- Topic  5 : methods -linear -analysis -theory -algorithms -processing -models -data -basic -optimization -
+- Topic  6 : energy -materials -properties -power -physics -heat -phase -magnetic -transfer -equations -
+- Topic  7 : design -methods -system -control -innovation -content -teaching -business -assessment -research -
+- Topic  8 : systems -engineering -design -methods -exercises -content -lectures -expected -system -class -
+- Topic  9 : methods -optical -quantum -risk -theory -laser -basic -optics -content -introduction -
+- Topic  10 : design -methods -content -stability -week -digital -assessment -final -note -activities -
+
 alpha =  3.0 &amp; beta = 1.01
-Topic  1 : methods -exam -assessment -work -theory -models -class -model -content -teaching -
-Topic  2 : chemical -chemistry -methods -processes -materials -magnetic -water -reactions -basic -content -
-Topic  3 : models -methods -analysis -linear -numerical -basic -concepts -exercises -equations -model -
-Topic  4 : methods -data -systems -algorithms -optimization -control -problems -analysis -system -design -
-Topic  5 : quantum -optical -materials -applications -content -methods -devices -mechanical -laser -design -
-Topic  6 : design -methods -teaching -development -work -group -research -project -content -skills -
-Topic  7 : energy -systems -design -methods -materials -concepts -heat -content -conversion -techniques -
-Topic  8 : methods -microscopy -optics -electron -content -imaging -optical -principles -mass -field -
-Topic  9 : scientific -biology -skills -information -project -methods -report -content -analysis -assessment -
-Topic  10 : project -semester -data -management -risk -engineering -research -systems -design -plan -
+- Topic  1 : methods -exam -assessment -work -theory -models -class -model -content -teaching -
+- Topic  2 : chemical -chemistry -methods -processes -materials -magnetic -water -reactions -basic -content -
+- Topic  3 : models -methods -analysis -linear -numerical -basic -concepts -exercises -equations -model -
+- Topic  4 : methods -data -systems -algorithms -optimization -control -problems -analysis -system -design -
+- Topic  5 : quantum -optical -materials -applications -content -methods -devices -mechanical -laser -design -
+- Topic  6 : design -methods -teaching -development -work -group -research -project -content -skills -
+- Topic  7 : energy -systems -design -methods -materials -concepts -heat -content -conversion -techniques -
+- Topic  8 : methods -microscopy -optics -electron -content -imaging -optical -principles -mass -field -
+- Topic  9 : scientific -biology -skills -information -project -methods -report -content -analysis -assessment -
+- Topic  10 : project -semester -data -management -risk -engineering -research -systems -design -plan -
+
 alpha =  1.01 &amp; beta = 1.01
-Topic  1 : design -project -methods -report -work -engineering -skills -semester -plan -week -
-Topic  2 : cell -biology -methods -molecular -biological -content -note -protein -cells -chemical -
-Topic  3 : design -methods -data -project -research -content -paper -work -presentation -assessment -
-Topic  4 : design -systems -methods -system -circuits -control -programming -content -processing -modeling -
-Topic  5 : optics -content -physics -applications -methods -optical -materials -properties -imaging -skills -
-Topic  6 : methods -quantum -materials -content -introduction -theory -image -physics -properties -magnetic -
-Topic  7 : linear -methods -models -basic -theory -analysis -probability -statistical -data -algebra -
-Topic  8 : data -methods -analysis -information -systems -management -class -project -concepts -content -
-Topic  9 : methods -numerical -models -analysis -project -time -equations -content -problems -introduction -
-Topic  10 : energy -methods -chemical -chemistry -processes -organic -heat -concepts -water -systems -
+- Topic  1 : design -project -methods -report -work -engineering -skills -semester -plan -week -
+- Topic  2 : cell -biology -methods -molecular -biological -content -note -protein -cells -chemical -
+- Topic  3 : design -methods -data -project -research -content -paper -work -presentation -assessment -
+- Topic  4 : design -systems -methods -system -circuits -control -programming -content -processing -modeling -
+- Topic  5 : optics -content -physics -applications -methods -optical -materials -properties -imaging -skills -
+- Topic  6 : methods -quantum -materials -content -introduction -theory -image -physics -properties -magnetic -
+- Topic  7 : linear -methods -models -basic -theory -analysis -probability -statistical -data -algebra -
+- Topic  8 : data -methods -analysis -information -systems -management -class -project -concepts -content -
+- Topic  9 : methods -numerical -models -analysis -project -time -equations -content -problems -introduction -
+- Topic  10 : energy -methods -chemical -chemistry -processes -organic -heat -concepts -water -systems -
+
 </pre>
 </div>
 </div>
