Lab4 lsi : correct some typing issues

--- a/ix-lab4/html/lab4-2-lsi.html
+++ b/ix-lab4/html/lab4-2-lsi.html
@@ -11943,7 +11943,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Print-the-top-10-topics-as-a-combination-of-terms-and-a-combination-of-documents.">Print the top-10 topics as a combination of terms and a combination of documents.<a class="anchor-link" href="#Print-the-top-10-topics-as-a-combination-of-terms-and-a-combination-of-documents.">&#182;</a></h3><p>For this, we will print the top 10 terms and decuments respectively of the top-10 topics</p>
+<h3 id="Print-the-top-10-topics-as-a-combination-of-terms-and-a-combination-of-documents.">Print the top-10 topics as a combination of terms and a combination of documents.<a class="anchor-link" href="#Print-the-top-10-topics-as-a-combination-of-terms-and-a-combination-of-documents.">&#182;</a></h3><p>For this, we will print the top 10 terms and documents respectively of the top-10 topics</p>
 
 </div>
 </div>
